Refactor generateValidSchedules