@@ -3,10 +3,9 @@ package edu.uga.devdogs.bruteforceprototype;
 import edu.uga.devdogs.bruteforceprototype.schedule.Schedule;
 import edu.uga.devdogs.bruteforceprototype.schedule.ScheduleUtil;
 import edu.uga.devdogs.sampledataparser.records.Course;
+import edu.uga.devdogs.sampledataparser.records.Section;
 
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 public class BruteForcePrototype {
 
@@ -50,11 +49,11 @@ public class BruteForcePrototype {
      * @return the set of unique, valid schedules for the given set of courses
      */
     public static Set<Schedule> generateValidSchedules(Set<Course> inputCourses) {
-        List<Course> courseList = Arrays.asList(inputCourses.toArray());
-        Set<Section> sectionList = new HashSet<Section>();
-        HashSet<Schedule> validSchedules = new HashSet<Schedule>();
+        List<Course> courseList = new ArrayList<>(inputCourses);
+        Set<Section> sectionList = new HashSet<>();
+        HashSet<Schedule> validSchedules = new HashSet<>();
 
-        recurGenerateValidSchedules(sectionList, courseList, validSchedules);
+        generateValidSchedulesRecursive(sectionList, courseList, validSchedules);
 
         return validSchedules;
     }
@@ -65,35 +64,35 @@ public class BruteForcePrototype {
      *  of the next course and recurse.
      *  A schedule's validity is determined by {@code ScheduleUtil.validate(schedule)}.
      * @param sections is the set of all sections in the current schedule
-     * @param currCoursesToAdd is the list of all of the courses which do not currently have a section in {@code sections}
+     * @param currCoursesToAdd is the list of all the courses which do not currently have a section in {@code sections}
      * @param validSchedules is the set of all discovered full valid schedules, every iteration uses the same
      *                       validSchedule object.
      * */
-    private static void recurGenerateValidSchedules(HashSet<Section> sections, List<Course> currCoursesToAdd, Set<Schedule> validSchedules){
+    private static void generateValidSchedulesRecursive(Set<Section> sections, List<Course> currCoursesToAdd, Set<Schedule> validSchedules){
         Schedule currSchedule = new Schedule(sections);
 
         // Gets rid of invalid schedules as soon as they become invalid instead of continuing to recurse
-        if (!validate(currSchedule)){
+        if (!ScheduleUtil.validate(currSchedule)){
             return;
         }
 
         // If there are no more courses to add, then it is a full valid schedule
-        if (currCoursesToAdd.size() == 0){
+        if (currCoursesToAdd.isEmpty()){
             validSchedules.add(currSchedule);
             return;
         }
 
         // Instantiates the list of courses for the next iteration
-        List<Course> nextCoursesToAdd = new ArrayList<Course>(currCoursesToAdd);
-        nextCoursesToAdd.remove(0);
+        List<Course> nextCoursesToAdd = new ArrayList<>(currCoursesToAdd);
+        nextCoursesToAdd.removeFirst();
 
         // Iterates over all sections for the next course and recurses
-        for (Section sectionToAdd: currCoursesToAdd.get(0).sections()){
+        for (Section sectionToAdd: currCoursesToAdd.getFirst().sections()){
             // Instantiates the set of sections for the next iteration
-            HashSet<Section> nextSections = new HashSet<Section>(sections);
+            HashSet<Section> nextSections = new HashSet<>(sections);
             nextSections.add(sectionToAdd);
             
-            recurGenerateValidSchedules(nextSections, nextCoursesToAdd, validSchedules);
+            generateValidSchedulesRecursive(nextSections, nextCoursesToAdd, validSchedules);
         }
     }
 }
